<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ChoHanActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">
        <TextView
            android:id="@+id/txt_balance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coins"
            />
        <TextView
            android:id="@+id/txt_cho_han_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:padding="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">
        <TextView
            android:id="@+id/txt_wager_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wager"/>
        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:onClick="minusbtn"
            />
        <TextView
            android:id="@+id/txt_wager_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"/>
        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:onClick="plusbtn"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/txt_guess_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_the_sum"/>
        <ToggleButton
            android:id="@+id/tglbtn_parity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/odd"
            android:textOn="@string/even"
            android:checked="false"
            android:onClick="paritybtn"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_roll"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/roll"
        android:textAlignment="center"
        android:onClick="rollbtn"/>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/txt_cho_han_die1"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@color/colorPrimary"
            android:textAlignment="center"
            android:text="@string/zero"
            android:textColor="@color/colorAccent"
            android:textSize="96sp" />
        <TextView
            android:id="@+id/txt_cho_han_die2"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginLeft="20dp"
            android:textAlignment="center"
            android:background="@color/colorPrimary"
            android:text="@string/zero"
            android:textColor="@color/colorAccent"
            android:textSize="96sp" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_return_to_wallet"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/return_to_wallet"
        android:textAlignment="center"
        android:onClick="launchWallet"/>
</LinearLayout>